# cobalt-installer

./: Cargo.toml  Dioxus.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
android/: MainActivity.kt  build.sh
assets/: main.css
src/: main.rs
